# ucm-data-science-tfm

./: .dockerignore  .env  .env.docker  .gitignore  .python-version  Dockerfile  Makefile  PAT.txt  README.md  docker-compose.yml  llm  package-lock.json  package.json  pyproject.toml  start.sh
backend/: .env.docker  .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt  start.sh  test_model.ipynb
backend/src/: alembic.ini
backend/src/app/: api.py  main.py  models.py
backend/src/app/chatbot/: enums.py
backend/src/app/chatbot/models/: __init__.py  chat.py  chat_message.py
backend/src/app/chatbot/repository/: __init__.py  chat.py  chat_message.py
backend/src/app/chatbot/schemas/: __init__.py  chat.py  (+1 more)
backend/src/app/common/: database.py  repository.py
backend/src/app/core/: config.py  database.py  database_ext.py  exception.py  lifespan.py  middlewares.py  rate_limiter.py
backend/src/app/financial/: enums.py
backend/src/app/services/: insight.py
backend/src/migrations/: env.py
backend/src/migrations/resources/: dataset.xlsx
backend/src/migrations/versions/: 20250129215102_create_monthly_lo.py  20250201092000_populate_tables.py  20250201122552_create_chat.py  20250201123029_create_chat_message.py  20250201222904_create_chat.py  20250201222930_create_chat_message.py
backend/src/my_chatbot/application/: sql_translate.py
backend/src/my_chatbot/infrastructure/: query.py  sql_translate.py
backend/src/shared_kernel/bus/: domain_event.py
backend/src/shared_kernel/domain/: aggregate.py  exception.py  value_object.py
(+201 files in other folders)
