[project]
name = "container"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.8"
dependencies = [
    "alembic==1.14.1",
    "asyncio==3.4.3",
    "asyncpg==0.30.0",
    "black==24.10.0",
    "email-validator==2.2.0",
    "fastapi==0.115.7",
    "fastapi-pagination==0.12.34",
    "greenlet==3.1.1",
    "loguru==0.7.3",
    "numpy==2.0.2",
    "pandas==2.2.3",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "six==1.17.0",
    "slowapi==0.1.9",
    "tensorflow==2.18.0",
    "SQLAlchemy==2.0.37",
    "uvicorn==0.34.0",
    "openpyxl>=3.1.5",
]



[dependency-groups]
dev = [
    "pytest==8.3.4",
]

[tool.black]
line-length = 130
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
